# rice

./: .gitignore  README.md  pyproject.toml  setup.sh
ansible/: requirements.yml  site.yml
ansible/roles/common/files/environment.d/: 01-pass.conf  02-podman.conf
ansible/roles/common/files/pass-ext/: wofi.bash
ansible/roles/common/files/zsh-custom/: 00-path.zsh  pass.zsh
ansible/roles/common/tasks/: main.yml
ansible/roles/desktop/files/: firefox-personal.desktop  firefox-work.desktop
ansible/roles/desktop/files/applications/: brave-profile-chooser.desktop
ansible/roles/desktop/files/config/: mimeapps.list
ansible/roles/desktop/files/sway/: config
ansible/roles/desktop/files/swaylock/: config
ansible/roles/desktop/files/swaync/: config.json
ansible/roles/desktop/files/waybar/: config
ansible/roles/desktop/files/wofi/: style.css
ansible/roles/desktop/tasks/: main.yml
ansible/roles/development/files/: 100-development.conf  100-development.zsh
ansible/roles/development/files/doom/: config.el  init.el  packages.el
ansible/roles/development/files/zsh-custom/: 20-aws-completion.zsh
ansible/roles/development/tasks/: main.yml
ansible/roles/gaming/tasks/: main.yml
ansible/roles/install_pwa/: README.md
ansible/roles/install_pwa/tasks/: main.yml
ansible/roles/install_pwa/templates/: launcher.desktop.j2
ansible/roles/ryzen/files/: looking-glass.desktop  vfio-pci.conf
ansible/roles/ryzen/files/looking-glass/: config.ini  wrapper.sh
ansible/roles/ryzen/tasks/: main.yml
ricectl/: __init__.py  config.py
(+14 files in other folders)
